@@ -6,13 +6,14 @@ import org.junit.jupiter.api.Test;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 //@SpringBootTest
 class ChatRobotBackendApplicationTests {
 
     @Test
     void contextLoads() throws UnsupportedEncodingException {
-        String str = URLEncoder.encode("你好", "utf-8");
+        String str = URLEncoder.encode("你好", StandardCharsets.UTF_8);
         String robotContent = HttpClientUtil.doGet("http://api.qingyunke.com/api.php?key=free&appid=0&msg=" + str);
 
         JSONObject jsonObject = JSONObject.parseObject(robotContent);
